fix: resolve design issues, security vulnerabilities and code quality